# GLSK

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md  TODOS.md
cwd/glsl/: example.vs
include/glsk/: hello.h
src/: hello.c  main.c
